# cslibs_plugins

./: .gitlab-ci.yml  README.md
cslibs_plugins/: CMakeLists.txt  package.xml
cslibs_plugins/cmake/: FindTinyXML.cmake
cslibs_plugins/include/cslibs_plugins/: launch_file_parser.hpp  plugin.hpp  plugin_factory.hpp  plugin_loader.hpp  plugin_loader_v2.hpp  plugin_manager.hpp
cslibs_plugins/test/: launch_file_parser.cpp  launch_file_parser.test
cslibs_plugins_data/: CMakeLists.txt  package.xml  plugins.xml
cslibs_plugins_data/include/cslibs_plugins_data/: data.hpp  data_provider.hpp  data_provider_2d.hpp  data_provider_3d.hpp
cslibs_plugins_data/include/cslibs_plugins_data/types/: laserscan.hpp  laserscan_convert.hpp  odometry_2d.hpp  odometry_3d.hpp  pointcloud.hpp  pointcloud_2d.hpp  pointcloud_3d.hpp
cslibs_plugins_data/src/: laser_pointcloud_2d_provider.cpp  laser_pointcloud_2d_provider.h  laser_polar_pointcloud_2d_provider.cpp  laser_polar_pointcloud_2d_provider.h  laser_provider.cpp  laser_provider.h  laser_provider_2d.cpp  laser_provider_2d.h  odometry_2d_provider.cpp  odometry_2d_provider.h  odometry_2d_provider_2d.cpp  odometry_2d_provider_2d.h  odometry_2d_provider_tf.cpp  odometry_2d_provider_tf.h  odometry_2d_provider_tf_2d.cpp  odometry_2d_provider_tf_2d.h  pointcloud_3d_provider.cpp  pointcloud_3d_provider.h  pointcloud_provider_2d.cpp  pointcloud_provider_2d.h
cslibs_plugins_data/test/: integration.cpp  integration.test  plugins.cpp  plugins.test
