<?xml version="1.0"?>
<package format="2">
  <name>cslibs_plugins</name>
  <version>0.0.1</version>
  <description>
    The cslibs_plugins package contains plugins.
  </description>

  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
