<?xml version="1.0"?>
<package format="2">
  <name>cslibs_plugins</name>
  <version>0.0.7</version>
  <description>
    The cslibs_plugins package contains basic functions to load plugins.
  </description>

  <author email="richard.hanten@uni-tuebingen.de">Richard Hanten</author>
  <author email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</author>

  <maintainer email="richard.hanten@uni-tuebingen.de">Richard Hanten</maintainer>
  <maintainer email="cornelia.schulz@uni-tuebingen.de">Cornelia Schulz</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
